k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
      - name: backend
        image: YOUR_DOCKERHUB_USERNAME/ecommerce-backend:1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/products
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/products
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
  - port: 8080
    targetPort: 8080
